[metadata]
name = astro_ghost
author = Alexander Gagliano
author_email = gaglian2@illinois.edu
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = http://astro-ghost.readthedocs.io
description = Database of supernovae and the photometric and spectroscopic properties of their host galaxies
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = uiucsn/astro_ghost

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =
    astropy
    pandas
    sklearn
    numpy
    seaborn
    matplotlib
    joypy
    photutils
    scipy
    datetime
    requests
    imblearn
    rfpimp
    Pillow
    pyvo
    astroquery

[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy
    sphinx-rtd-theme

[options.package_data]
astro_ghost = data/*

[tool:pytest]
testpaths = "astro_ghost" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    astro_ghost/_astropy_init*
    astro_ghost/conftest.py
    astro_ghost/*setup_package*
    astro_ghost/tests/*
    astro_ghost/*/tests/*
    astro_ghost/extern/*
    astro_ghost/version*
    */astro_ghost/_astropy_init*
    */astro_ghost/conftest.py
    */astro_ghost/*setup_package*
    */astro_ghost/tests/*
    */astro_ghost/*/tests/*
    */astro_ghost/extern/*
    */astro_ghost/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
